2011-05-01  Tuomo Keskitalo  <Tuomo.Keskitalo@iki.fi>

	* Replaced ChangeLog with contents of ode-initval2 development log
	file (ChangeLog-odeiv2_development) and reformatted the log file.

2010-10-16  Tuomo Keskitalo  <Tuomo.Keskitalo@iki.fi>

	* Modified evolve and driver so that when user function returns
	GSL_EBADFUNC, then ode-initval2 functions return immediately with
	that same return value.

	* Corrected bug in msadams for saving ordm1coeff to state. Thanks
	to Andrew Benson for pointing out this bug!

2010-10-10  Tuomo Keskitalo  <Tuomo.Keskitalo@iki.fi>

	* driver.c: Corrected error in driver_evolve_apply, integration to
	negative direction should work now.

	* Added evolve_apply_fixed_step and driver_apply_fixed_step for
	users who want to use a constant step size to evolve the system.

	* test.c: added test cases for driver (negative evolution,
	apply_fixed_step).

	* gsl_odeiv2.h: cleaning and add apply_fixed_step functions.

	* doc/ode-initval.texi: Replaced derivative apostrophe with \prime
	(because my new system fails to make ps otherwise). Added new
	documentation about apply_fixed_step functions.

2010-10-09  Tuomo Keskitalo  <Tuomo.Keskitalo@iki.fi>

	* ode-initval2 bzr development branch now at savannah:
	http://bzr.savannah.gnu.org/r/gsl/ode-initval2/

2010-01-02  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>

	* Changes from ode-initval2-0.9 to ode-initval2-1.0:

	* Removed set_control member from step object and added a
	set_driver member to evolve, control and step objects, so that the
	driver object and consequently evolve, control and step objects
	are all accessible from another. Currently only some steppers
	utilize this. They access the control_errlevel function via
	state->driver->c instead of state->control. This modification to
	the framework enables implementation of more efficient ODE
	solvers, which utilize communication among evolve, control and
	stepper objects. This also means that some steppers now require a